# trail-betting

./: .gitignore  README.md  app.py  config_pages.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/assets/styles/: styles.html
src/components/: authentification.py  config.py  navigation.py  session_state.py
src/db/: connection.py
src/db/documentation/: schema.sql  views.sql
src/db/queries/: queries_classement.py  queries_coureurs.py  queries_courses.py  queries_paris.py  queries_resultats.py
src/functions/: paris_dialog.py  utils.py
src/pages/: accueil.py  classement.py  courses.py  login.py  saisie.py
